cmake_minimum_required(VERSION 3.4.1)
add_executable(binary_search binary_search.c)
add_executable(floyd floyd.c)
add_executable(stack_using_array stack_using_array.c)
add_executable(add_matrices add_matrices.c)
add_executable(bubble_sort_function bubble_sort_function.c)
add_executable(add add.c)
add_executable(armstrong armstrong.c)
add_executable(add_n add_n.c)
add_executable(bubble_sort bubble_sort.c)
add_executable(palindrome palindrome.c)
add_executable(arm_gen arm_gen.c)
add_executable(string_length string_length.c)
add_executable(factorial factorial.c)
add_executable(diamond diamond.c)
add_executable(linear_search linear_search.c)
add_executable(queue_using_linked_list queue_using_linked_list.c)
add_executable(stack_using_linked_list stack_using_linked_list.c)
add_executable(insert_array insert_array.c)
add_executable(de_queue de_queue.c)
add_executable(circular_queue circular_queue.c)
add_executable(insertion_sort insertion_sort.c)
add_executable(comp_string comp_string.c)
add_executable(singly_linked_list singly_linked_list.c)
add_executable(doubly_linked_list doubly_linked_list.c)
add_executable(fibonacci fibonacci.c)
add_executable(dectobin dectobin.c)
add_executable(circular_linked_list circular_linked_list.c)
add_executable(linear_queue linear_queue.c)
add_executable(del_array del_array.c)
add_executable(odd_even odd_even.c)
